# internbootcamp_v2

./: .gitignore  .gitmodules  README.md  pyproject.toml  script.sh  serve_vllm.sh  setup.py
data/: datagen_error_log.jsonl
data/binairo/: binairo_20251203073257_test.jsonl
data/puzzle24/: puzzle24_20251203072550_test.jsonl
internbootcamp/: __init__.py  script.sh
internbootcamp/bootcamps/: __init__.py
internbootcamp/bootcamps/NP_MM/: __init__.py  prompt_NP_MM.json  prompt_md.py
internbootcamp/bootcamps/RLVR_MM/: binairo_standalone.py  instruction.py  instruction_generator.py  mock_internbootcamp.py  reward.py  run_integration.py
internbootcamp/bootcamps/binairo/: reward_calculator.py  run_integration.py
internbootcamp/bootcamps/example_bootcamp/: __init__.py  example_instruction_generator.py  example_interaction.py  example_reward_calculator.py  example_tools.py
internbootcamp/bootcamps/gsm8k/: gsm8k_evaluator.py  gsm8k_reward_manager.py  gsm8k_tool.py
internbootcamp/bootcamps/puzzle24/: README.md  __init__.py  puzzle24_instruction_generator.py  (+1 more)
internbootcamp/reward_manager/: bootcamp.py
internbootcamp/src/: __init__.py  base_evaluator.py  base_instruction_generator.py  base_interaction.py  base_mcp_tool.py  base_reward_calculator.py  base_server_setup.py  base_tool.py  img2base64.py
internbootcamp/utils/: __init__.py  batch_data_generation.py  data_generation.py  data_postprocess.py  format_time_now.py  jsonl2parquet.py  load_class_from_str.py  load_interaction_from_config.py  load_tool_from_config.py  run_evaluation.py
(+106 files in other folders)
