# -------------------------------
# build-system
# -------------------------------
[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

# -------------------------------
# project (PEP 621 metadata)
# -------------------------------
[project]
name = "internbootcamp"
version = "2.0.0"
description = "internbootcamp"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "internbootcamp v2.0.0 Team"}
]

dependencies = [
    "fastmcp>=2.13.2",
    "jsonlines>=4.0.0",
    "matplotlib>=3.10.7",
    "tenacity>=9.1.2",
    "verl[vllm]>=0.6.1",
]

# -------------------------------
# tool.setuptools - Additional config
# -------------------------------
[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "."

